--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   redis:
     image: redis:latest
@@ -13,7 +11,7 @@ services:
     env_file:
       - .env  # Загружаем переменные окружения из .env
     command: >
-      sh -c "source /opt/venv/bin/activate &&
+      bash -c "source /opt/venv/bin/activate &&
              celery -A app.config worker --loglevel=info"
 
   parser:
@@ -23,5 +21,5 @@ services:
     env_file:
       - .env  # Загружаем переменные окружения из .env
     command: >
-      sh -c "source /opt/venv/bin/activate &&
+      bash -c "source /opt/venv/bin/activate &&
              python app/parser.py"
